--- a/style.css
+++ b/style.css
@@ -14,11 +14,13 @@
   background-color: transparent;
 }
 
-body {
-  font-family: Georgia, 'Times New Roman', Times, serif;
+body { +
+  
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+
   font-size: 18px;
   color: rgb(255, 255, 255);
-  background-color: rgb(205, 155, 199);
+  background-color: rgb(131, 50, 120);
 }
 /* burbujas */
 .tamaño {
@@ -195,7 +197,7 @@ body {
   height: 100vh;
   z-index: 800;
   position: relative;
-  clip-path: polygon(
+  /* clip-path: polygon(
     29% 1%,
     53% 25%,
     56% 57%,
@@ -203,7 +205,7 @@ body {
     55% 96%,
     0 85%,
     10% 54%,
-    6% 18%
+    6% 18% */
   );
 }
 .logotipo {
@@ -217,11 +219,13 @@ body {
   z-index: 999;
   top: 25vh;
   width: 35vw;
-  right: 8vw;
-  color: rgb(251, 210, 133);
-  font-size: 40px;
-  font-family: 'Times New Roman', Times, serif;
+  right: 14vw;
+  color: rgb(16, 173, 174);
+  font-size: 37px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 800;
 }
+
 .parrafo-1 {
   position: absolute;
   z-index: 999;
@@ -230,7 +234,7 @@ body {
   right: -3vw;
   color: rgb(255, 241, 241);
   font-size: 20Px;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 /* barra de navegacion */
 .nav-link {
@@ -250,7 +254,7 @@ a.nav-link:hover {
   transform: scale(1.2);
 }
 .btn {
-  color: turquoise;
+  color: rgb(16, 173, 174);
   background-color: black;
 }
 .j {
@@ -277,15 +281,22 @@ a.nav-link:hover {
 .titulo1 {
   font-size: 18px;
 }
-.titulo1-1 {
-  font-size: 18px;
-  color: rgb(251, 210, 133);
+.titulo10 {
+  font-size: 20px;
+  color: rgb(255, 255, 255);
+  font-weight: 500;
 }
-
+.titulo1-1 {
+  font-size: 24px;
+  color: rgb(251, 210, 133);
+  font-weight: 800;
+}
 H4 {
   color: rgb(16, 173, 174);
-  font-size: 30px;
+  font-size: 40px;
   margin-top: 10px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 800;
 }
 
 .card-header {
@@ -295,6 +306,8 @@ H4 {
   margin-top: 10px;
   color: transparent;
   margin: 0;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+
 }
 
 .card-body {
@@ -305,6 +318,7 @@ H4 {
   padding: 0%;
   margin: 0;
   background-color: transparent;
+  /* background-color: transparent; */
 }
 
 /* NOSOTROS */
@@ -353,34 +367,22 @@ H4 {
   text-align: left;
 }
 .prestamoTxt {
-  position: absolute;
-  z-index: 999;
-  top: 405vh;
-  right: 44vw;
+  text-align: center;
   font-size: 20px;
   color: rgb(255, 255, 255);
 }
 .prestamoTxt2 {
-  position: absolute;
-  z-index: 999;
-  top: 415vh;
-  right: 40vw;
-  font-size: 43px;
+  text-align: center;
+  font-size: 65px;
   color: rgb(251, 210, 133);
 }
-.prestamoTxt3 {
-  position: absolute;
-  z-index: 999;
-  top: 425vh;
-  right: 36vw;
+.prestamoTxt3 {  
+  text-align: center;
   font-size: 20px;
   color: rgb(255, 255, 255);
 }
 .prestamoTxt4 {
-  position: absolute;
-  z-index: 999;
-  top: 430vh;
-  right: 38vw;
+  text-align: center;
   font-size: 20px;
   color: rgb(255, 255, 255);
 }
@@ -391,9 +393,9 @@ H4 {
 }
 .titulo5-1 {
     color: rgb(251, 210, 133);
-
+  font-weight: 800;
   text-align: center;
-  font-size: 30px;
+  font-size: 23px;
   color
 }
 .ubicacion {
@@ -407,8 +409,9 @@ H4 {
 
 /* formulario */
 .txtFor1 {
-font-size: 25px;
-color: rgb(251, 210, 133);
+font-size: 30px;
+color: rgb(16, 173, 174);
+font-weight: 900;
 }
 .txtFor2 {
   font-size: 20px;
