--- a/style.css
+++ b/style.css
@@ -20,8 +20,94 @@ body {
 
   font-size: 18px;
   color: rgb(255, 255, 255);
-  background-color: rgb(131, 50, 120);
+  background-color: rgb(99, 93, 93);
 }
+
+/* barra */
+html {
+  scroll-behavior: smooth;
+}
+
+
+.navbar{
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  background-color:transparent;
+  width: 100%;
+  height: 70px;
+  z-index: 1;
+}
+.nav{
+  display: flex;
+  justify-content: right;
+  list-style: none;
+  margin-right: 15%;
+}
+.logo {
+  flex: 1 1 auto;
+  margin-left: 10%;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+img{
+  width: 20%;
+}
+a{
+  margin: 15px;
+  color: #000;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+a:hover{
+  color: #000;
+}
+.banner-area{
+  position: relative;
+  background-image: url(/imagenes/Cerdito.png);
+  width: 100%;
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.about-area, .port-area, .service-area, .contact-area{
+  position: relative;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-direction: row;
+  width: 100%;
+  height: 700px;
+}
+.text-part{
+  width: 65%;
+  height: 80%;
+}        
+.nosotros-area{
+  background-color: transparent;
+}
+.pronafim-area{
+  background-color: transparent;
+}
+.ubicacion-area{
+  background-color: transparent;
+}
+.apoyo-area{
+  background-color: transparent;
+}
+
+.contact-area{
+  background-color: transparent;
+}
+
+
+
+
 /* burbujas */
 .tamaño {
   height: 50px;
@@ -197,6 +283,7 @@ body {
   height: 100vh;
   z-index: 800;
   position: relative;
+
   /* clip-path: polygon(
     29% 1%,
     53% 25%,
@@ -205,9 +292,11 @@ body {
     55% 96%,
     0 85%,
     10% 54%,
-    6% 18% */
-  );
+    6% 18%
+  );*/
 }
+
+
 .logotipo {
   width: 70px;
 }
@@ -406,6 +495,10 @@ H4 {
   height: 105%;
   width: 100%;
 }
+.casa {
+  height: 100vh;
+  width: 100%;
+
 
 /* formulario */
 .txtFor1 {
