--- a/style.css
+++ b/style.css
@@ -183,8 +183,7 @@
   background-color: transparent;
 }
 
-body { 
-  
+body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 
   font-size: 18px;
@@ -197,19 +196,19 @@ html {
   scroll-behavior: smooth;
 }
 
-.navbar{
+.navbar {
   position: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: row;
   flex-wrap: wrap;
-  background-color:transparent;
+  background-color: transparent;
   width: 100%;
   height: 70px;
   z-index: 1;
 }
-.nav{
+.nav {
   display: flex;
   justify-content: right;
   list-style: none;
@@ -217,7 +216,7 @@ html {
   font-size: 17px;
   color: white;
 }
-.nav-a{
+.nav-a {
   color: white;
 }
 
@@ -227,19 +226,19 @@ html {
   text-transform: uppercase;
   letter-spacing: 1px;
 }
-img{
+img {
   width: 20%;
 }
-a{
+a {
   margin: 15px;
   color: #000;
   text-decoration: none;
   text-transform: uppercase;
 }
-a:hover{
+a:hover {
   color: #000;
 }
-.banner-area{
+.banner-area {
   position: relative;
   background-image: url(/imagenes/Cerdito.png);
   width: 100%;
@@ -248,7 +247,10 @@ a:hover{
   background-size: cover;
 }
 
-.about-area, .port-area, .service-area, .contact-area{
+.about-area,
+.port-area,
+.service-area,
+.contact-area {
   position: relative;
   display: flex;
   justify-content: space-around;
@@ -258,30 +260,29 @@ a:hover{
   width: 100%;
   height: 700px;
 }
-.text-part{
+.text-part {
   width: 65%;
   height: 80%;
-}        
-.nosotros-area{
+}
+.nosotros-area {
   background-color: transparent;
 }
-.pronafim-area{
+.pronafim-area {
   background-color: transparent;
 }
-.ubicacion-area{
+.ubicacion-area {
   background-color: transparent;
 }
-.apoyo-area{
-  background-color: transparent;
-}
-
-.formulario-area{
-  background-color: transparent;
-}
-.contacto-area{
+.apoyo-area {
   background-color: transparent;
 }
 
+.formulario-area {
+  background-color: transparent;
+}
+.contacto-area {
+  background-color: transparent;
+}
 
 /* ------------------------- */
 .principal {
@@ -290,7 +291,6 @@ a:hover{
   z-index: 800;
   position: relative;
 }
-
 
 .logotipo {
   width: 70px;
@@ -317,12 +317,10 @@ a:hover{
   width: 35vw;
   right: -3vw;
   color: rgb(255, 241, 241);
-  font-size: 16Px;
+  font-size: 16px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 /* barra de navegacion */
-
-
 
 .btn {
   color: rgb(0, 0, 0);
@@ -378,7 +376,6 @@ H4 {
   color: transparent;
   margin: 0;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-
 }
 
 .card-body {
@@ -447,7 +444,7 @@ H4 {
   font-size: 65px;
   color: rgb(251, 210, 133);
 }
-.prestamoTxt3 {  
+.prestamoTxt3 {
   text-align: center;
   font-size: 20px;
   color: rgb(255, 255, 255);
@@ -463,7 +460,7 @@ H4 {
   font-size: 20px;
 }
 .titulo5-1 {
-    color: rgb(251, 210, 133);
+  color: rgb(251, 210, 133);
   font-weight: 800;
   text-align: center;
   font-size: 23px;
@@ -483,31 +480,36 @@ H4 {
 
 /* formulario */
 .txtFor1 {
-font-size: 30px;
-color: rgb(16, 173, 174);
-font-weight: 900;
+  font-size: 30px;
+  color: rgb(16, 173, 174);
+  font-weight: 900;
 }
 .txtFor2 {
   font-size: 20px;
   color: rgb(255, 255, 255);
-  } 
+}
 
 .colFor {
-color: rgb(0, 0, 0);
+  color: rgb(0, 0, 0);
 }
 
 .face {
-height: 45px;
-width: 45px;
+  height: 45px;
+  width: 45px;
 }
 
 .llamada {
   height: 45px;
   width: 45px;
-  }
-  
+}
+
 .redes {
-height: 100%;
-width: 100%;
-    }
-    
+  height: 100%;
+  width: 100%;
+}
+.rosa {
+  height: 100%;
+  width: 100%;
+  margin-top: -700%;
+  opacity: 1;
+}
