--- a/style.css
+++ b/style.css
@@ -345,7 +345,6 @@ a:hover {
   height: 100%;
   width: 100%;
   position: relative;
-
 }
 
 /* titulo */
@@ -353,21 +352,18 @@ a:hover {
   font-size: 18px;
   position: relative;
   color: #000;
-
 }
 .titulo10 {
   font-size: 20px;
   color: rgb(0, 0, 0);
   font-weight: 500;
   position: relative;
-
 }
 .titulo1-1 {
   font-size: 24px;
   color: rgb(251, 210, 133);
   font-weight: 800;
   position: relative;
-
 }
 H4 {
   color: rgb(16, 173, 174);
@@ -376,7 +372,6 @@ H4 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: 800;
   position: relative;
-
 }
 
 .card-header {
@@ -400,7 +395,6 @@ H4 {
   background-color: transparent;
   /* background-color: transparent; */
   position: relative;
-
 }
 
 /* NOSOTROS */
@@ -408,21 +402,18 @@ H4 {
   width: 115%;
   height: 360px;
   position: relative;
-
 }
 /* SERVICIO */
 .servicio {
   height: 400px;
   width: 570px;
   position: relative;
-
 }
 /* PRESTAMO */
 .prestamo {
   height: 500px;
   width: 500px;
   position: relative;
-
 }
 /* viejo foto */
 .viejo {
@@ -435,20 +426,17 @@ H4 {
   font-size: 19px;
   color: rgb(251, 210, 133);
   position: relative;
-
 }
 
 .parrafo2 {
   font-size: 19px;
   color: rgb(251, 210, 133);
   position: relative;
-
 }
 .parrafo3 {
   font-size: 19px;
   color: rgb(251, 210, 133);
   position: relative;
-
 }
 .nube {
   position: relative;
@@ -473,14 +461,12 @@ H4 {
   font-size: 65px;
   color: rgb(251, 210, 133);
   position: relative;
-
 }
 .prestamoTxt3 {
   text-align: center;
   font-size: 20px;
   color: rgb(0, 0, 0);
   position: relative;
-
 }
 .prestamoTxt4 {
   text-align: center;
@@ -503,7 +489,7 @@ H4 {
   position: relative;
 }
 .ubicacion {
-  height: 100%;
+  height: 800px;
   width: 100%;
   position: relative;
 }
@@ -516,7 +502,6 @@ H4 {
   height: 100vh;
   width: 100%;
   position: relative;
-
 }
 
 /* formulario */
@@ -535,7 +520,6 @@ H4 {
 .colFor {
   color: rgb(0, 0, 0);
   position: relative;
-
 }
 
 .face {
@@ -556,8 +540,16 @@ H4 {
   position: relative;
 }
 .rosa {
-  height: 10000px;
+  height: 9050px;
   width: 100%;
   margin-top: -600%;
   opacity: 1;
+}
+
+.btn {
+  position: relative;
+}
+
+.formulario-area {
+position: relative;
 }
