--- a/style.css
+++ b/style.css
@@ -329,6 +329,9 @@ a:hover {
 .j {
   background-color: transparent;
 }
+.na{
+color:rgb(255, 255, 255);
+}
 
 /*parrafo*/
 .puerco {
@@ -355,7 +358,7 @@ a:hover {
 }
 .titulo10 {
   font-size: 20px;
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
   font-weight: 500;
   position: relative;
 }
