--- a/style.css
+++ b/style.css
@@ -331,6 +331,8 @@ a:hover {
 }
 .col-barra{
 color:rgb(255, 255, 255);
+font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+font-size: 20px;
 }
 
 /*parrafo*/
