--- a/style.css
+++ b/style.css
@@ -188,39 +188,39 @@ body {
 
   font-size: 18px;
   color: rgb(255, 255, 255);
-  background-image: radial-gradient(
-    circle at 50% 76.49%,
-    #7cb367 0,
-    #6eb570 3.33%,
-    #5eb67a 6.67%,
-    #4cb884 10%,
-    #36b98f 13.33%,
-    #11b99b 16.67%,
-    #00baa6 20%,
-    #00bab2 23.33%,
-    #00babd 26.67%,
-    #00b9c8 30%,
-    #00b8d2 33.33%,
-    #00b7db 36.67%,
-    #00b6e3 40%,
-    #00b4ea 43.33%,
-    #00b2f0 46.67%,
-    #11aff4 50%,
-    #41acf7 53.33%,
-    #5ea9f7 56.67%,
-    #75a5f7 60%,
-    #89a1f4 63.33%,
-    #9b9df0 66.67%,
-    #ac98eb 70%,
-    #bb94e4 73.33%,
-    #c890dc 76.67%,
-    #d38cd3 80%,
-    #dd88c9 83.33%,
-    #e585bf 86.67%,
-    #eb83b4 90%,
-    #f082a9 93.33%,
-    #f2829d 96.67%,
-    #f48292 100%
+  background-image: linear-gradient(
+    0,
+    #00b5ec 0,
+    #00b4fe 3.33%,
+    #00b2ff 6.67%,
+    #00b0ff 10%,
+    #00adff 13.33%,
+    #00a9ff 16.67%,
+    #00a4ff 20%,
+    #009eff 23.33%,
+    #0097ff 26.67%,
+    #008fff 30%,
+    #6485ff 33.33%,
+    #947bff 36.67%,
+    #b66fff 40%,
+    #d162fe 43.33%,
+    #e754ec 46.67%,
+    #f946d9 50%,
+    #ff37c5 53.33%,
+    #ff29b0 56.67%,
+    #ff1f9b 60%,
+    #ff1d86 63.33%,
+    #ff2571 66.67%,
+    #ff325d 70%,
+    #ff4049 73.33%,
+    #ff4e34 76.67%,
+    #ff5b1c 80%,
+    #f76700 83.33%,
+    #ea7200 86.67%,
+    #db7d00 90%,
+    #cc8600 93.33%,
+    #ba8e00 96.67%,
+    #a89500 100%
   );
 }
 
