--- a/style.css
+++ b/style.css
@@ -235,10 +235,14 @@ nav {
   align-items: center;
   flex-direction: row;
   flex-wrap: wrap;
-  background-color: transparent;
+  background: rgba(255, 255, 255, 0.2);
   width: 100%;
   min-height: 80px;
   z-index: 1;
+  transition: 1s all;
+}
+nav.sticky {
+  background: rgba(0, 0, 0, 0.7);
 }
 .nav-a {
   color: white;
@@ -328,40 +332,64 @@ nav {
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   font-size: 18px;
 }
+a#link.nav-link.active.col-barra0.sticky {
+  color: red;
+}
 .navbar-nav .col-barra1 {
   color: rgb(255, 255, 255);
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   font-size: 18px;
+}
+a#link.nav-link.active.col-barra1.sticky {
+  color: red;
 }
 .navbar-nav .col-barra2 {
   color: rgb(0, 47, 255);
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   font-size: 18px;
 }
+a#link.nav-link.active.col-barra2.sticky {
+  color: red;
+}
 .navbar-nav .col-barra3 {
   color: rgb(255, 196, 0);
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   font-size: 18px;
+}
+a#link.nav-link.active.col-barra3.sticky {
+  color: red;
 }
 .navbar-nav .col-barra4 {
   color: rgb(255, 247, 0);
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   font-size: 18px;
 }
+a#link.nav-link.active.col-barra4.sticky {
+  color: red;
+}
 .navbar-nav .col-barra5 {
   color: rgb(0, 255, 21);
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   font-size: 18px;
+}
+a#link.nav-link.active.col-barra5.sticky {
+  color: red;
 }
 .navbar-nav .col-barra6 {
   color: #00f2ff;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   font-size: 18px;
 }
+a#link.nav-link.active.col-barra6.sticky {
+  color: red;
+}
 .navbar-nav .col-barra7 {
   color: rgb(255, 8, 8);
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   font-size: 18px;
+}
+a#link.nav-link.active.col-barra7.sticky {
+  color: red;
 }
 /*parrafo*/
 .puerco {
